tests/ui/opts/attr_on_variant.stderr
error: #[funcmap] helper attribute is not supported for variants
 --> tests/ui/opts/attr_on_variant.rs:5:5
  |
5 |     #[funcmap]
  |     ^^^^^^^^^^
